force-app/main/default/objects/Contact/fields/Work_Experience__c.field-meta.xml
<CustomField>
    <fullName>Work_Experience__c</fullName>
    <label>Work Experience</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No experience</fullName>
            </value>
            <value>
                <fullName>Less than a year</fullName>
            </value>
            <value>
                <fullName>1-3 years</fullName>
            </value>
            <value>
                <fullName>3-5 years</fullName>
            </value>
            <value>
                <fullName>More than 5 years</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>