force-app/main/default/objects/Contact/recordTypes/PanelForce_Associate.recordType-meta.xml
<RecordType>
    <fullName>PanelForce_Associate</fullName>
    <active>false</active>
    <label>PanelForce Associate</label>
</RecordType>